--- a/ma-pypolit-hw03.ipynb
+++ b/ma-pypolit-hw03.ipynb
@@ -440,16 +440,16 @@
    "outputs": [],
    "source": [
     "test_data = [\n",
-    "    (\"Гагаринская 2\", \"Следующая станция: Заельцовская\"),\n",
-    "    (\"Гагаринская 1\", \"Следующая станция: Красный проспект\"), \n",
-    "    (\"Сибирская 1\", \"Следующая станция: Маршала Покрышкина\"),\n",
-    "    (\"Сибирская 2\", \"Следующая станция: Площадь Гарина-Михайловского\"),\n",
-    "    (\"Речной Вокзал 1\", \"Следующая станция: Студенческая\"),\n",
-    "    (\"Речной Вокзал 2\", \"Следующая станция: Октябрьская\"),\n",
+    "    (\"Гагаринская;2\", \"Следующая станция: Заельцовская\"),\n",
+    "    (\"Гагаринская;1\", \"Следующая станция: Красный проспект\"), \n",
+    "    (\"Сибирская;1\", \"Следующая станция: Маршала Покрышкина\"),\n",
+    "    (\"Сибирская;2\", \"Следующая станция: Площадь Гарина-Михайловского\"),\n",
+    "    (\"Речной Вокзал;1\", \"Следующая станция: Студенческая\"),\n",
+    "    (\"Речной Вокзал;2\", \"Следующая станция: Октябрьская\"),\n",
     "]\n",
     "\n",
     "for inp, out in test_data:\n",
-    "    with Tester(inp.split()) as t:\n",
+    "    with Tester(inp.split(\";\")) as t:\n",
     "        metro()\n",
     "        assert len(t) == 1, \"Вам нужно вывести ровно одну строку с ответом\"\n",
     "        assert t[0] == out+\"\\n\", \"Неверный ответ, была введена строка \" + inp"
